--- a/WebApp/Views/Ecosistema/Create.cshtml
+++ b/WebApp/Views/Ecosistema/Create.cshtml
@@ -35,11 +35,18 @@
                 <span asp-validation-for="Caracteristicas" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
+            @* <div class="form-group">
                 <label for="Pais">Pais:</label>
 
-                <select asp-for="Pais" asp-items="@(new SelectList(ViewBag.Paises,"Nombre","CodAlpha"))" class="control-label"></select>
+                <select asp-for="Pais" asp-items="@(new SelectList(ViewBag.Paises,"Nombre","Codigo"))" class="control-label"></select>
+            </div> *@
+
+
+            <div class="form-group">
+                <label asp-for="Pais.Codigo" class="control-label">Pais:</label>
+                <select asp-for="Pais.Nombre" asp-items="@(new SelectList(ViewBag.Paises, "Codigo", "Nombre"))" class="form-control"></select>
             </div>
+
 
 
             @* latitud *@
