--- a/WebApp/Views/Ecosistema/Index.cshtml
+++ b/WebApp/Views/Ecosistema/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<h1>Index</h1>
+<h1>Ecosistemas Marinos</h1>
 
 
 @if (Model.Count() <= 0)
@@ -31,6 +31,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Area)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Pais.Nombre)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -45,6 +48,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Area)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Pais.Nombre)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
