--- a/WebApp/Views/Ecosistema/Create.cshtml
+++ b/WebApp/Views/Ecosistema/Create.cshtml
@@ -49,7 +49,7 @@
 
             <div class="form-group">
                 <label for="Pais">Pais</label>
-                <select multiple="multiple" class="form-control" asp-for="Paises" name="Pais.Codigo">
+                <select class="form-control" asp-for="codPais" >
                     <option disabled>-- Seleccione pais --</option>
                     @foreach (var p in ViewBag.Paises)
                     {
