--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -51,6 +51,10 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Autorizacion" asp-action="Logout">Logout</a>
                             </li>
                         }
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Ecosistema" asp-action="Delete">Eliminar ecosistema</a>
+                        </li>
                     </ul>
                 </div>
             </div>
