--- a/WebApp/Views/Ecosistema/Create.cshtml
+++ b/WebApp/Views/Ecosistema/Create.cshtml
@@ -47,18 +47,7 @@
                     }
                 </select>
             </div> 
-
-            @* <div class="form-group">
-                <label for="Amenazas">Amenazas:</label>
-                <select multiple="multiple" class="form-control" id="Amenazas.Id" name="Amenazas.Descripcion">
-                    @foreach (var amenaza in ViewBag.Amenazas)
-                    {
-                        <option value="@amenaza.Descripcion">@amenaza.Descripcion</option>
-                    }
-                </select>
-            </div> *@
-
-
+          
 
             @* latitud *@
             <div class="form-group">
@@ -79,6 +68,12 @@
                 <input asp-for="EstadoConservacion.Nombre" class="form-control" />
                 <span asp-validation-for="EstadoConservacion.Nombre" class="text-danger"></span>
             </div>
+
+            @* <div class="form-group">
+                <label for="ImgEcosistema" class="control-label"></label>
+                <input type="file" name=" imagen" class="form-control" />
+                <span asp-validation="ImgEcosistema" class="text-danger"></span>
+            </div> *@
 
 
 
