--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                         }
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Ecosistema" asp-action="Delete">Eliminar ecosistema</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Especie" asp-action="Delete">Listar todas las especies</a>
                         </li>
                     </ul>
                 </div>
