--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -55,6 +55,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Especie" asp-action="Delete">Listar todas las especies</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Especie" asp-action="Asociar">Asociar Especie a Ecosistema</a>
+                        </li>
                     </ul>
                 </div>
             </div>
