--- a/WebApp/Views/Especie/Asociar.cshtml
+++ b/WebApp/Views/Especie/Asociar.cshtml
@@ -2,7 +2,7 @@
 
 <h1>Asociar especie con ecosistema</h1>
 
- <form asp-action="Create">
+ <form asp-action="Asociar">
 <h3>Elija una especie</h3>
 <div class="form-group">
     <label for="EspecieMarina">Especie</label>
@@ -28,7 +28,7 @@
 </div>
 
 <div class="form-group pt-3">
-    <input type="submit" value="Create" class="btn btn-primary" />
+    <input type="submit" value="Asociar" class="btn btn-primary" />
 </div>
 
 </form>
