--- a/WebApp/Views/Especie/Asociar.cshtml
+++ b/WebApp/Views/Especie/Asociar.cshtml
@@ -1,4 +1,4 @@
-﻿@model EcosistemasMarinos.Entidades.EspecieMarina
+﻿@* @model EcosistemasMarinos.Entidades.EspecieMarina
 
 <h1>Asociar especie con ecosistema</h1>
 
@@ -26,3 +26,4 @@
         }
     </select>
 </div>
+ *@
