Eliminar ecosistema avisa si no es posible eliminar debido a que tiene especies asociadas

--- a/WebApp/Views/Ecosistema/Delete.cshtml
+++ b/WebApp/Views/Ecosistema/Delete.cshtml
@@ -48,3 +48,11 @@
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
+
+
+@if (!String.IsNullOrEmpty(ViewBag.Mensaje))
+{
+    <div class="alert alert-danger">
+        @ViewBag.Mensaje
+    </div>
+}
