--- a/WebApp/Views/Ecosistema/Index.cshtml
+++ b/WebApp/Views/Ecosistema/Index.cshtml
@@ -15,6 +15,13 @@
     </div>
 }
 
+@if (!String.IsNullOrEmpty(ViewBag.Mensaje))
+{
+    <div class="alert alert-danger">
+        @ViewBag.Mensaje
+    </div>
+}
+
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -67,3 +74,4 @@
 }
     </tbody>
 </table>
+
