--- a/WebApp/Views/Especie/Create.cshtml
+++ b/WebApp/Views/Especie/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="NombreCientifico" class="control-label">Nombre cientifico</label>
@@ -67,6 +67,12 @@
                         <option value="@e.IdEcosistema">@e.Nombre</option>
                     }
                 </select>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="ImgEspecie" class="control-label"></label>
+                <input asp-for="ImgEspecie" type="file" name="imagen" class="form-control" />
+                <span asp-validation-for="ImgEspecie" class="text-danger"></span>
             </div>
 
 
