Tratando de filtrar

--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -52,12 +52,14 @@
                             </li>
                         }
 
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Especie" asp-action="Delete">Listar todas las especies</a>
-                        </li>
+                        
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Especie" asp-action="Asociar">Asociar Especie a Ecosistema</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Especie" asp-action="Filtrado">Filtrar especies</a>
                         </li>
                     </ul>
                 </div>
