--- a/WebApp/Views/Especie/ResultadoFiltrado.cshtml
+++ b/WebApp/Views/Especie/ResultadoFiltrado.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<EcosistemasMarinos.Entidades.EspecieMarina>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "ResultadoFiltrado";
 }
 
-<h1>Index</h1>
+<h1>ResultadoFiltrado</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -22,14 +22,15 @@
                 @Html.DisplayNameFor(model => model.Descripcion)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.IdEstadoConservacion)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.ImgEspecie)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-
-
 @foreach (var item in Model) {
         <tr>
             <td>
@@ -42,12 +43,15 @@
                 @Html.DisplayFor(modelItem => item.Descripcion)
             </td>
             <td>
-                <img class="img-thumbnail" src="~/img/Ecosistemas/@item.ImgEspecie" />
+                @Html.DisplayFor(modelItem => item.IdEstadoConservacion)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ImgEspecie)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) 
-               @*  @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ }) *@
+                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
             </td>
         </tr>
 }
