--- a/WebApp/Views/Especie/ResultadoFiltrado.cshtml
+++ b/WebApp/Views/Especie/ResultadoFiltrado.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.IdEstadoConservacion)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ImgEspecie)
+                <img class="img-thumbnail" src="~/img/Ecosistemas/@item.ImgEspecie" />
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
