lista de amenazas en especie //Sin probar

--- a/WebApp/Views/Especie/Create.cshtml
+++ b/WebApp/Views/Especie/Create.cshtml
@@ -70,6 +70,17 @@
             </div>
 
             <div class="form-group">
+                <label for="Amenazas">Amenazas</label>
+                <select multiple="multiple" class="form-control" asp-for="_amenazas" name="amenazaIds">
+                    <option disabled>-- Seleccione amenazas --</option>
+                    @foreach (var a in ViewBag.Amenazas)
+                    {
+                        <option value="@a.IdAmenaza">@a.Descripcion</option>
+                    }
+                </select>
+            </div>
+
+            <div class="form-group">
                 <label asp-for="ImgEspecie" class="control-label"></label>
                 <input asp-for="ImgEspecie" type="file" name="imagen" class="form-control" />
                 <span asp-validation-for="ImgEspecie" class="text-danger"></span>
