--- a/WebApp/Views/Ecosistema/Create.cshtml
+++ b/WebApp/Views/Ecosistema/Create.cshtml
@@ -63,10 +63,20 @@
                 <span asp-validation-for="UbicacionGeografica.Longitud" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="EstadoConservacion.Nombre" class="control-label">Estado de conservacion (ej: Vulnerable, En peligro, Extinta)</label>
                 <input asp-for="EstadoConservacion.Nombre" class="form-control" />
                 <span asp-validation-for="EstadoConservacion.Nombre" class="text-danger"></span>
+            </div> *@
+
+            <div class="form-group">
+                <label for="EstadoConservacion">EstadoConservacion</label>
+                <select class="form-control" asp-for="IdEstadoConservacion">
+                    <option disabled>-- Seleccione estado de conservacion --</option>
+                    <option value="1">Aceptable</option>
+                    <option value="2">Optimo</option>
+                    <option value="3">Vulnerable</option>
+                </select>
             </div>
 
             <div class="form-group">
