--- a/WebApp/Views/Especie/Create.cshtml
+++ b/WebApp/Views/Especie/Create.cshtml
@@ -53,9 +53,14 @@
             </div> *@
 
             <div class="form-group">
-                <label asp-for="EstadoConservacion.Nombre" class="control-label">Estado de conservacion</label>
-                <input asp-for="EstadoConservacion.Nombre" class="form-control" />
-                <span asp-validation-for="EstadoConservacion.Nombre" class="text-danger"></span>
+                <label for="EstadoConservacion">EstadoConservacion</label>
+                <select class="form-control" asp-for="IdEstadoConservacion">
+                    <option disabled>-- Seleccione estado de conservacion --</option>
+                    @foreach (var estado in ViewBag.Estados)
+                    {
+                        <option value="@estado.Id">@estado.Nombre</option>
+                    }
+                </select>
             </div>
 
             <div class="form-group">
