Imagenes ahora anda bien(update especie y ecosistema)

--- a/WebApp/Views/Especie/Index.cshtml
+++ b/WebApp/Views/Especie/Index.cshtml
@@ -42,7 +42,7 @@
                 @Html.DisplayFor(modelItem => item.Descripcion)
             </td>
             <td>
-                <img class="img-thumbnail" src="~/img/Ecosistemas/@item.ImgEspecie" />
+                <img class="img-thumbnail" src="~/img/Especies/@item.ImgEspecie" />
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
