interfaz de configuracion(falta index de config)

--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -61,6 +61,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Especie" asp-action="Filtrado">Filtrar especies</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Configuracion" asp-action="Edit">Editar topes</a>
+                        </li>
                     </ul>
                 </div>
             </div>
