--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Configuracion" asp-action="Edit">Editar topes</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Configuracion" asp-action="Index">Editar topes</a>
                         </li>
                     </ul>
                 </div>
