--- a/WebApp/Views/Especie/Create.cshtml
+++ b/WebApp/Views/Especie/Create.cshtml
@@ -28,7 +28,7 @@
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
 
-            @* <div class="form-group">
+            <div class="form-group">
                 <label asp-for="rangoPeso.PesoMin" class="control-label"></label>
                 <input asp-for="rangoPeso.PesoMin" class="form-control" />
                 <span asp-validation-for="rangoPeso.PesoMin" class="text-danger"></span>
@@ -50,7 +50,7 @@
                 <label asp-for="rangoLongitud.LongitudMax" class="control-label"></label>
                 <input asp-for="rangoLongitud.LongitudMax" class="form-control" />
                 <span asp-validation-for="rangoLongitud.LongitudMax" class="text-danger"></span>
-            </div> *@
+            </div>
 
             <div class="form-group">
                 <label for="EstadoConservacion">EstadoConservacion</label>
