--- a/WebApp/Views/Ecosistema/Create.cshtml
+++ b/WebApp/Views/Ecosistema/Create.cshtml
@@ -92,7 +92,7 @@
 
             <div class="form-group">
                 <label asp-for="ImgEcosistema" class="control-label"></label>
-                <input asp-for="ImgEcosistema" type="file" name="imagen" class="form-control" />
+                <input asp-for="ImgEcosistema" type="file" name="imagen" class="form-control" accept=".jpg, .jpeg, .png" />
                 <span asp-validation-for="ImgEcosistema" class="text-danger"></span>
             </div>
 
