--- a/WebApp/Views/Especie/Create.cshtml
+++ b/WebApp/Views/Especie/Create.cshtml
@@ -87,7 +87,7 @@
 
             <div class="form-group">
                 <label asp-for="ImgEspecie" class="control-label"></label>
-                <input asp-for="ImgEspecie" type="file" name="imagen" class="form-control" />
+                <input asp-for="ImgEspecie" type="file" name="imagen" class="form-control" accept=".jpg, .jpeg, .png" />
                 <span asp-validation-for="ImgEspecie" class="text-danger"></span>
             </div>
 
