--- a/WebApp/Views/Usuario/Create.cshtml
+++ b/WebApp/Views/Usuario/Create.cshtml
@@ -13,8 +13,9 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Contrasenia" class="control-label"></label>
-                <input asp-for="Contrasenia" class="form-control" />
+                <label asp-for="Contrasenia" class="control-label">Contraseña</label>
+                <input asp-for="Contrasenia" class="form-control" type="password"/>
+                <p class="password-hint">La contraseña debe contener al menos una mayúscula, una minúscula y al menos uno de los siguientes caracteres: ., #, ;, :, !</p>
                 <span asp-validation-for="Contrasenia" class="text-danger"></span>
             </div>
             <div class="form-group">
