--- a/WebApp/Views/Usuario/Create.cshtml
+++ b/WebApp/Views/Usuario/Create.cshtml
@@ -23,7 +23,11 @@
                 <input asp-for="Alias" class="form-control" />
                 <span asp-validation-for="Alias" class="text-danger"></span>
             </div>
- 
+             @if(true)
+            {
+                
+            }
+
            @*  <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="EsAdmin" /> @Html.DisplayNameFor(model => model.EsAdmin)
