--- a/WebApp/Views/Especie/Index.cshtml
+++ b/WebApp/Views/Especie/Index.cshtml
@@ -4,7 +4,15 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+
+@if (Model.Count() <= 0)
+{
+    <div class="alert alert-warning">
+        No hay especies disponibles
+    </div>
+}
+
+<h1>Listado de especies</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
