--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -68,17 +68,15 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Autorizacion" asp-action="Logout">Logout</a>
                             </li>
-                        }
-
-                        
-
-                        
+                        }                                           
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Especie" asp-action="Filtrado">Filtrar especies</a>
                         </li>
 
-                       
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Especie" asp-action="FiltrarDadaUnaEspecie">Filtrar ecosistemas dada una especie</a>
+                        </li>
                     </ul>
                 </div>
             </div>
