--- a/WebApp/Views/Especie/ResultadoFiltrado.cshtml
+++ b/WebApp/Views/Especie/ResultadoFiltrado.cshtml
@@ -54,7 +54,7 @@
                 @Html.DisplayFor(modelItem => item.EstadoConservacion.Nombre)
             </td>
             <td>
-                <img class="img-thumbnail" src="~/img/Ecosistemas/@item.ImgEspecie" />
+                <img class="img-thumbnail" src="~/img/Especies/@item.ImgEspecie" />
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
